--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ position: absolute;
 </head>
 <body>
 <div class="card">
-<h1>Hey Love 💕</h1>
+<h1>Hey Varshiii 💕</h1>
 <p>
 From my heart to this screen…<br>
 Will you be my Valentine? 🌹
@@ -88,3 +88,4 @@ button.style.top = y + "px";
 </script>
 </body>
 </html>
+
